Fix dropdown text left aligned

--- a/data/interfaces/default/css/tautulli.css
+++ b/data/interfaces/default/css/tautulli.css
@@ -225,6 +225,9 @@ select.form-control option {
     color: #555;
     background-color: #eee;
 }
+select.btn {
+    text-align: left;
+}
 img {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
